--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>JSD7 STORE</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-[#FCDEE1] px-16 py-6">
+  <body class="bg-[#FCDEE1] px-16 py-6 pb-[200px]">
     <!--#####PRODUCT FORM#####-->
-    <h1 class="text-[58px] font-bold text-center font-sans text-[#413D3C]">
+    <h1 class="text-[58px] font-bold text-center font-sans text-[#413839]">
       Shopping Cart 🛒
     </h1>
-    <h3 class="text-[32px] mt-5 font-bold text-[#413D3C]">
+    <h3 class="text-[32px] mt-12 font-bold text-[#413D3C]">
       Add Item for selection
     </h3>
     <form action="" id="form" class="flex pt-5 gap-4" justify-between>
@@ -45,7 +45,7 @@
       </div>
       <button
         type="submit"
-        class="bg-blue-500 px-3 text-white rounded-md hover:bg-blue-600 hover:ring hover:ring-blue-300"
+        class="bg-[#C32148] px-6 text-white rounded-md hover:bg-[#d7c0c5] hover:ring hover:ring-[#494243]"
       >
         Create Product
       </button>
@@ -58,7 +58,7 @@
     <!--#####PRODUCT FORM#####-->
     <button
       id="addbtn"
-      class="bg-green-500 px-4 text-white rounded-md hover:bg-green-600 hover:ring hover:ring-green-300"
+      class="bg-[#454545] px-10 py-3 mt-4 text-white rounded-md hover:bg-[#B3B3B3] hover:ring hover:ring-[#A9A9A9]"
     >
       Add to Cart
     </button>
@@ -66,7 +66,7 @@
     <div id="btnCal"></div>
 
     <!--#####HAVE TO PAY #####-->
-    <div id="total"></div>
+    <div class="text-[24px] font-bold mt-8" id="total"></div>
     <script src="main.js"></script>
   </body>
 </html>
